# vestigo-rag-stack

./: .env.example  .gitignore  .importlinter  README.md  main.py  pyproject.toml
.planning/: PROJECT.md
config/: config.yaml.example
docs/: architecture.md  changelog.md  contracts.md  phases.md  pipeline.md  requirements.md
services/: __init__.py
services/admin/: README.md  __init__.py  api.py
services/admin/application/: file_config_provider.py  placeholders.py
services/api_gateway/: README.md  __init__.py  api.py
services/api_gateway/application/: rag_pipeline_orchestrator.py
services/audit/: README.md  __init__.py
services/audit/application/: file_audit_logger.py  placeholders.py
services/config/: README.md  __init__.py
services/config/application/: placeholders.py
services/ingest/: README.md  __init__.py  api.py
services/ingest/application/: placeholders.py
services/llm/: README.md  __init__.py  api.py
services/llm/application/: placeholders.py
services/retrieval/: README.md  __init__.py  api.py
services/vector_store/: README.md  __init__.py  api.py
services/vector_store/application/: in_memory_vector_store.py  placeholders.py
tests/: test_framework_smoke.py
